# jupyterlab-tauri

./: README.md  package.json
.github/workflows/: publish.yaml
env_installer/: construct.js  construct.yaml
src/: App.svelte  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  JupyterLabDesktopAppServer.txt  launch.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/macOS/: launch.sh  setup-venv.sh  venv-libraries.sh  venv-projects.sh
src-tauri/resources/macOS/5_packed/: PyYAML-6.0-cp310-cp310-macosx_11_0_universal2.whl  cffi-1.15.1-cp310-cp310-macosx_11_0_universal2.whl  charset_normalizer-3.1.0-cp310-cp310-macosx_11_0_universal2.whl  psutil-5.9.5-cp38-abi3-macosx_11_0_universal2.whl
src-tauri/resources/macOS/Gennaker.help/Contents/: Info.plist
src-tauri/resources/macOS/Gennaker.help/Contents/Resources/en.lproj/: Gennaker.cshelpindex  Gennaker.helpindex  Gennaker.html  Info.plist
src-tauri/resources/macOS/config/: config.toml
src-tauri/resources/macOS/jupyter-libraries/: gennaker-replacements.txt  gennaker-requirements.txt
src-tauri/resources/shared/config/: .MathJax_CHTML {.html  auto-f-ff01.jupyterlab-workspace  auto-g-1261.jupyterlab-workspace  default-37a8.jupyterlab-workspace  jupyter_notebook_config.py  jupyter_server_config.py  tufte_inspired.css  tufte_inspired_katex.css
src-tauri/resources/shared/config/@jupyterlab/apputils-extension/: notification.jupyterlab-settings
src-tauri/resources/shared/config/@jupyterlab/extensionmanager-extension/: plugin.jupyterlab-settings
src-tauri/resources/shared/config/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
src-tauri/resources/shared/config/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
src-tauri/resources/shared/config/data/: file_id_manager.db  nbsignatures.db  notebook_secret
src-tauri/resources/shared/config/path/labconfig/: page_config.json
src-tauri/resources/shared/jupyter-libraries/: signing.py  styles.py
src-tauri/src/: installer.rs  jupyterlab.rs  main.rs  python_env.rs
src/lib/: Launch.svelte  SetupEnv.svelte
