[package]
name = "jupyter-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "1.2", features = ["dialog", "http-api"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
portpicker = "0.1"
rand = "0.8"
semver = "1"

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
