[package]
name = "jupyter-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/resources-map" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/resources-map" }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
anyhow = "1"
serde = "1"
tauri = { version = "1.4", features = [ "dialog-message", "http-api"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
portpicker = "0.1"
rand = "0.8"
semver = "1"
fs_extra = "1"

[target."cfg(target_os = \"macos\")".dependencies]
security-framework = "2"

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
